separate files, export/import, react, webpack

--- a/aspnet-webapi-signalr-cards/index.html
+++ b/aspnet-webapi-signalr-cards/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
     <div id="root"></div>
+    <div id="card-root"></div>
     <div>
         <h2>All Products</h2>
         <ul id="products" />
