svgs, card model/controller/json

--- a/aspnet-webapi-signalr-cards/index.html
+++ b/aspnet-webapi-signalr-cards/index.html
@@ -1,20 +1,20 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Product App</title>
+    <title>Card App</title>
 </head>
 <body>
     <div id="root"></div>
     <div id="card-root"></div>
     <div>
-        <h2>All Products</h2>
-        <ul id="products" />
+        <h2>All Cards</h2>
+        <ul id="cards" />
     </div>
     <div>
         <h2>Search by ID</h2>
         <input type="text" id="prodId" size="5" />
         <input type="button" value="Search" onclick="find();" />
-        <p id="product" />
+        <p id="card" />
     </div>
 
     <div class="container">
