basic react card object (that does nothing)

--- a/aspnet-webapi-signalr-cards/index.html
+++ b/aspnet-webapi-signalr-cards/index.html
@@ -12,8 +12,8 @@
     </div>
     <div>
         <h2>Search by ID</h2>
-        <input type="text" id="prodId" size="5" />
-        <input type="button" value="Search" onclick="find();" />
+        <input type="text" id="cardId" size="5" />
+        <button id="find" type="button" value="Search">Search</button>
         <p id="card" />
     </div>
 
