--- a/aspnet-webapi-signalr-cards/index.html
+++ b/aspnet-webapi-signalr-cards/index.html
@@ -4,6 +4,7 @@
     <title>Card App</title>
 </head>
 <body>
+    <label>IM A LABEL</label>
     <div id="root"></div>
     <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.0.3.min.js"></script>
     <!--<script src="Scripts/jquery-3.1.1.min.js"></script>-->
