--- a/aspnet-webapi-signalr-cards/index.html
+++ b/aspnet-webapi-signalr-cards/index.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Card App</title>
+    <link rel="stylesheet" type="text/css" href="./Styles/main.css" media="screen" />
 </head>
 <body>
     <div id="root"></div>
